[project]
name = "implements-helper"
version = "1.0.5"
description = ""
authors = [
    {name = "Mikimini9627"}
]
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
    "numpy (==1.26.4,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "useragent-changer (>=0.3.2,<0.4.0)",
    "ruff (>=0.8.6,<0.9.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
description = "Python実装時に利用できるユーティリティ群"
license = "MIT License"
homepage = "https://github.com/Mikimini9627/implements_helper"
repository = "https://github.com/Mikimini9627/implements_helper"
readme = "README.rst"
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
]